<resources>
    <string name="app_name">DenTeeth</string>
    <string name="label_bem_vindo">Bem vindo ao DenTeeth</string>
    <string name="label_bem_vindo_description">Aqui você encontra atendimentos simplificados.</string>
    <string name="label_email">E-mail</string>
    <string name="label_senha">Senha</string>
    <string name="label_entrar">Entrar</string>
    <string name="label_sem_conta">Não tenho conta.</string>
    <string name="label_registrar_se">Registrar-se</string>
    <string name="label_crie_sua_conta">Crie sua conta</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone_req">Telefone*</string>
    <string name="label_senha_req">Senha*</string>
    <string name="label_email_req">Email*</string>
    <string name="label_endereco1_req">Endereço de atendimento 1*</string>
    <string name="label_endereco2_req">Endereço de atendimento 2</string>
    <string name="label_endereco3_req">Endereço de atendimento 3</string>
    <string name="label_curriculo_req">Digite aqui…</string>
    <string name="label_nome_req">Nome*</string>
    <string name="label_dados_pessoais">Dados Pessoais</string>
    <string name="label_adicionar_endereco">+  Adicionar Endereço</string>
    <string name="label_curriculo">Currículo</string>
    <string name="label_tirar_selfie">Tire uma selfie</string>
    <string name="label_obs_foto">Obs: Certifique-se de estar em um ambiante iluminado e sem objetivos ou pessoas no fundo!</string>
    <string name="label_deixar_para_depois">Deixar para depois</string>
    <string name="label_subtitulo_1">Está quase lá!</string>
    <string name="label_subtitulo_2">Agora, leia e aceite os termos de uso:</string>
    <string name="label_obs_termos">* Ao clicar no botão aceitar você está de acordo com os Termos de Uso</string>
    <string name="label_aceitar">Aceitar</string>
    <string name="label_recusar">Recusar</string>
    <string name="label_termos_de_uso">Termos De Uso</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="title_activity_criar_conta">CriarContaActivity</string>
    <string name="title_activity_lista_emergencia">ListaEmergenciaActivity</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="fcm_default_title_message" translatable="false">Nova Emergência</string>
    <string name="fcm_secondary_title_message" translatable="false">Resposta do Socorrista</string>
    <string name="label_emergencia">Emergência</string>
    <string name="label_perfil">Perfil</string>
    <string name="label_reputacao">Reputação</string>
    <string name="title_activity_tela_principal">TelaPrincipalActivity</string>
    <string name="texto_termos_de_uso">Estes Termos de Uso (Termos) são um acordo legal entre você e a equipe do DenTeeth, responsável pelo desenvolvimento e operação do aplicativo DenTeeth (Aplicativo). Ao utilizar o Aplicativo DenTeeth, você concorda com estes Termos e está sujeito a eles. Por favor, leia atentamente os seguintes termos antes de usar o Aplicativo. Notificações 1.1 Ao utilizar o Aplicativo DenTeeth, você concorda em receber notificações apenas em um dispositivo móvel com as notificações habilitadas. Essas notificações podem incluir lembretes de consultas, informações sobre o tratamento dental, atualizações de recursos e outras comunicações relevantes relacionadas ao Aplicativo. Armazenamento de Dados 2.1 Ao criar uma conta no Aplicativo DenTeeth, você concorda que seus dados serão armazenados nos serviços da Google Firebase, incluindo, mas não se limitando a, Firebase Storage, Firestore e Firebase Authentication. Esses serviços são utilizados para garantir a segurança e a funcionalidade adequada do Aplicativo. Status da Conta 3.1 Ao criar uma conta no Aplicativo DenTeeth, o seu status inicial será definido como ativo. Isso permite que você acesse todos os recursos disponíveis e desfrute plenamente dos serviços oferecidos pelo Aplicativo. Análise de Uso 4.1 Para aprimorar a qualidade e a usabilidade do Aplicativo DenTeeth, dados sobre o seu uso serão coletados e enviados para o Google Analytics. Essas informações ajudam a equipe do DenTeeth a entender melhor como os usuários interagem com o Aplicativo, identificar possíveis melhorias e fornecer um serviço mais personalizado. Conexão à Internet 5.1 Para acessar e utilizar todos os recursos do Aplicativo DenTeeth, é necessário ter uma conexão estável com a internet. A qualidade da sua experiência no Aplicativo pode variar de acordo com a velocidade e a estabilidade da sua conexão de internet. Considerações Finais Estes Termos de Uso são um acordo entre você e a equipe do DenTeeth e regem o uso do Aplicativo DenTeeth. Ao utilizar o Aplicativo, você concorda em cumprir estes Termos e quaisquer políticas ou diretrizes adicionais fornecidas pela equipe do DenTeeth. Lembre-se de que o DenTeeth é um aplicativo destinado a fins dentários e todas as informações fornecidas pelo Aplicativo são apenas para fins informativos. O Aplicativo não substitui a consulta e o tratamento de um profissional de odontologia qualificado. Se tiver alguma dúvida sobre estes Termos de Uso, entre em contato com a equipe do DenTeeth para obter esclarecimentos adicionais.</string>
    <string name="title_activity_editar_perfil">EditarPerfilActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>