<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/RegistroFragment">

    <fragment
        android:id="@+id/RegistroFragment"
        android:name="br.edu.puccampinas.denteeth.RegistroFragment"
        android:label="@string/label_crie_sua_conta"
        tools:layout="@layout/fragment_registro">

        <action
            android:id="@+id/action_RegistroFragment_to_TelaCameraFragment"
            app:destination="@id/TelaCameraFragment" />
    </fragment>
    <fragment
        android:id="@+id/TelaCameraFragment"
        android:name="br.edu.puccampinas.denteeth.TelaCameraFragment"
        android:label="@string/label_tirar_selfie"
        tools:layout="@layout/fragment_tela_camera">

        <action
            android:id="@+id/action_TelaCameraFragment_to_TermosDeUsoFragment"
            app:destination="@id/TermosDeUsoFragment" />
    </fragment>
    <fragment
        android:id="@+id/TermosDeUsoFragment"
        android:name="br.edu.puccampinas.denteeth.TermosDeUsoFragment"
        android:label="@string/label_termos_de_uso"
        tools:layout="@layout/fragment_termos_de_uso" />

</navigation>