<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermosDeUsoFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitulo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_subtitulo_1"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitulo2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_subtitulo_2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitulo1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTermosDeUso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/borda"
        android:fontFamily="@font/inter_regular"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:text="Este site foi criado e desenvolvido com a função de trazer conteúdo informativo de alta qualidade, a venda de produtos físicos, digitais e a divulgação de prestação de serviço. A EMPRESA busca através da criação de conteúdo de alta qualidade, desenvolvido por profissionais da área, trazer o conhecimento ao alcance de todos, assim como a divulgação dos próprios serviços."
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitulo2" />

    <Button
        android:id="@+id/btnAceitarTermos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_aceitar"
        app:layout_constraintEnd_toEndOf="@id/tvObs"
        app:layout_constraintTop_toBottomOf="@id/tvObs" />

    <Button
        android:id="@+id/btnRecusarTermos"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_recusar"
        app:layout_constraintEnd_toStartOf="@id/btnAceitarTermos"
        app:layout_constraintTop_toBottomOf="@id/tvObs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvObs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_obs_termos"
        app:layout_constraintTop_toBottomOf="@id/tvTermosDeUso" />

</androidx.constraintlayout.widget.ConstraintLayout>