<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:padding="8dp"
    tools:context=".TelaInicioActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/label_bem_vindo"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubTexto"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_bem_vindo_description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvBemVindo"
        app:layout_constraintTop_toBottomOf="@id/tvBemVindo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/denteeth_bem_vindo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubTexto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBemVindo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiSenha"
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_senha"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_entrar"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiSenha" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSemConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/label_sem_conta"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRegistrar"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/label_registrar_se"
            android:textColor="@color/baby_blue_500"
            android:textSize="16sp" />
    </LinearLayout>

    <!--    <androidx.appcompat.widget.AppCompatTextView-->
    <!--        android:id="@+id/tvSemConta"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:fontFamily="@font/inter_regular"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:text="Não tenho conta."-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="16sp" -->
    <!--        app:layout_constraintTop_toBottomOf="@id/btnEntrar"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/tvRegistrar"/>-->

    <!--    <androidx.appcompat.widget.AppCompatTextView-->
    <!--        android:id="@+id/tvRegistrar"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:fontFamily="@font/inter_bold"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:text=" Registrar-se."-->
    <!--        android:textColor="@color/baby_blue_500"-->
    <!--        android:textSize="16sp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/btnEntrar"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@id/tvSemConta"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>