<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:padding="8dp"
    tools:context=".TelaCameraActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTireUmaSelfie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/pacifico_regular"
        android:text="@string/label_tirar_selfie"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBarra"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:src="@drawable/progress_bar_02"
        app:layout_constraintTop_toBottomOf="@+id/tvTireUmaSelfie" />

    <androidx.camera.view.PreviewView
        android:id="@+id/pvViewFinder"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/ivBarra" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvObs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_obs_foto"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pvViewFinder" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/black"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvObs" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeixarDepois"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/label_deixar_para_depois"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>